--- a/public/style.css
+++ b/public/style.css
@@ -5,21 +5,21 @@
   width: 20px;
 }
 
- .energyUsageLow{
+ .low-usage{
    background-color: green;
    border-radius: 10px;
    height: 20px;
    width: 20px;
  }
 
- .energyUsageMedium{
+ .medium-usage{
    background-color: orange;
    border-radius: 10px;
    height: 20px;
    width: 20px;
  }
 
- .energyUsageHigh{
+ .high-usage{
    background-color: red;
    border-radius: 10px;
    height: 20px;
